--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@ output.pdf
 
 # Emacs backup files
 *\~
+\#*\#
+
+# Output files
+output/
+*.pdf
+*.npz
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
